Update UI and Image

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta property="og:title" content="新冠戰士">
-    <meta property="og:image" content="TemplateData/unity-logo-dark.png">
-    <meta property="og:description" content="成為新冠戰士吧">
+    <meta property="og:title" content="CovidWarrior">
+    <meta property="og:description" content="Become the COVID-19 Warrior！">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 </head>
